# reestudo_jornada_de_dados

./: README.md  pyproject.toml
class02/: exercises_float.py  exercises_for.py  exercises_funcao.py  exercises_int.py  exercises_str.py  import.py  list_comprehension.py  try_except.py  try_except_if.py
class06/: main.py  pyproject.toml
class07/: elt.py  sales.csv
class08/: dados.parquet  etl.py
